# uav_comm

./: .gitignore  README_CN.md
gen_commnet/: auto_commnet_gen.py  gen_commnet_cpp.py  mavgen.py  mavparse.py  v_CommnetGenCopy.sh
gen_mavlinkHPP/: README_gen_mavlinkHPP.md  v_CommnetGenCopy.sh  w_genCopy_local.sh  y_genCopy_All.sh  z_edit_XML_local.sh
uav/src/: common.yaml
uav/src/cluster_msgs/: CMakeLists.txt  package.xml  readme_clustermsgs.md
uav/src/cluster_msgs/include/cluster_msgs/: common_define.h
uav/src/cluster_msgs/msg/: global_gps_double.msg  heart_beat.msg  uav_gps_pos.msg  uav_loc_pos_enu_yaw.msg
uav/src/commnet/: CMakeLists.txt  Readme_commnet_udp.md  package.xml
uav/src/commnet/include/mavlink/commnet/: commnet.h  mavlink.h  mavlink_msg_back_home_pos_enu.h  mavlink_msg_back_home_pos_gps_int.h  mavlink_msg_changestate.h  mavlink_msg_console.h  mavlink_msg_console_monitor.h  mavlink_msg_get_home_position.h  mavlink_msg_gimbal_current_angle.h  mavlink_msg_gimbal_set_angle.h  mavlink_msg_global_gps_double.h  mavlink_msg_global_position_int.h  mavlink_msg_heart_beat.h  mavlink_msg_heartbeat.h  mavlink_msg_kcf_set_target.h  mavlink_msg_kcf_target_pos.h  mavlink_msg_local_position_enu.h  mavlink_msg_mission_back_info.h  mavlink_msg_mission_ctrl_set_pos.h  mavlink_msg_mission_exec.h  mavlink_msg_mission_info.h  mavlink_msg_mission_set.h  mavlink_msg_px4_special_param.h  mavlink_msg_px4_special_set.h  mavlink_msg_px4mavros_param_special_back.h  mavlink_msg_px4mavros_param_special_getset.h  mavlink_msg_px4param_special_back.h  mavlink_msg_px4param_special_getset.h  mavlink_msg_set_formation_loc_pos_enu.h  mavlink_msg_set_formation_loc_pos_enu_back.h  mavlink_msg_set_global_position_int.h  mavlink_msg_set_home_pos_enu.h  mavlink_msg_set_home_pos_gps_int.h  mavlink_msg_set_loc_pos_enu.h  mavlink_msg_set_local_position_enu.h  mavlink_msg_state_onboardflight.h  mavlink_msg_uav_formation_loc_pos_enu.h  mavlink_msg_uav_gps_pos.h  mavlink_msg_uav_loc_pos_enu.h  mavlink_msg_uav_loc_pos_enu_yaw.h  (+2 more)
uav/src/commnet/launch/: udp_gcs.launch
uav/src/commnet/src/: ros_udp_pubtopic.cpp  ros_udp_subtopic.cpp
(+10 files in other folders)
